--- a/wp-content/languages/zh_CN.po
+++ b/wp-content/languages/zh_CN.po
@@ -1,15 +1,15 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: EGG website\n"
-"POT-Creation-Date: 2015-11-30 00:37+0800\n"
-"PO-Revision-Date: 2015-11-30 00:37+0800\n"
+"Project-Id-Version: EVIE website\n"
+"POT-Creation-Date: 2016-01-26 01:02+0800\n"
+"PO-Revision-Date: 2016-01-26 01:02+0800\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: zh_TW\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 1.8.6\n"
+"X-Generator: Poedit 1.8.2\n"
 "X-Poedit-Basepath: ../themes/evie\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
 "X-Poedit-KeywordsList: _e;__\n"
@@ -17,19 +17,7 @@ msgstr ""
 "X-Poedit-SearchPath-0: templates\n"
 "X-Poedit-SearchPath-1: woocommerce\n"
 "X-Poedit-SearchPath-2: woocommerce/global\n"
-"X-Poedit-SearchPath-3: index.php\n"
-
-#: index.php:25 templates/content-blog.php:91
-msgid "Sorry, no results were found."
-msgstr "对不起，没有找到结果。"
-
-#: index.php:37
-msgid "&larr; Older posts"
-msgstr ""
-
-#: index.php:38
-msgid "Newer posts &rarr;"
-msgstr ""
+"X-Poedit-SearchPath-3: woocommerce/loop\n"
 
 #: templates/comments.php:19
 msgid "&larr; Older comments"
@@ -53,7 +41,8 @@ msgstr "类别"
 
 #: templates/content-blog.php:50 templates/content-blog.php:62
 #: templates/content-stocklist.php:36 templates/content-testimonial.php:101
-#: templates/content-testimonial.php:105 templates/content-testimonial.php:128
+#: templates/content-testimonial.php:105
+#: templates/content-testimonial.php:128
 #: templates/content-testimonial.php:132
 msgid "All"
 msgstr "所有"
@@ -65,23 +54,27 @@ msgstr "存档"
 #: templates/content-blog.php:82 templates/content-single.php:58
 #: woocommerce/content-single-product.php:69
 msgid "tencent"
-msgstr "腾讯"
+msgstr "腾讯微博"
 
-#: templates/content-blog.php:107
+#: templates/content-blog.php:91
+msgid "Sorry, no results were found."
+msgstr "对不起，没有找到结果。"
+
+#: templates/content-blog.php:113
 msgid "Continue reading »"
 msgstr "继续阅读 »"
 
-#: templates/content-blog.php:109
+#: templates/content-blog.php:115
 msgid "READ MORE >"
-msgstr "阅读更多 >"
+msgstr "阅读全文 >"
 
-#: templates/content-blog.php:120 templates/content-blog.php:122
+#: templates/content-blog.php:126 templates/content-blog.php:128
 msgid "Previous Page"
-msgstr "上一页"
+msgstr "上一篇文章"
 
-#: templates/content-blog.php:131 templates/content-blog.php:134
+#: templates/content-blog.php:137 templates/content-blog.php:140
 msgid "Next Page"
-msgstr "下一页"
+msgstr "下一篇文章"
 
 #: templates/content-home.php:92
 msgid "bestsellers"
@@ -90,6 +83,18 @@ msgstr "畅销排行"
 #: templates/content-promotion.php:50
 msgid "MORE SPECIAL OFFERS"
 msgstr "更多优惠"
+
+#: templates/content-single.php:80
+msgid "BACK"
+msgstr "返回"
+
+#: templates/content-single.php:97 templates/content-single.php:99
+msgid "Previous Post"
+msgstr "上一篇文章"
+
+#: templates/content-single.php:110 templates/content-single.php:112
+msgid "Next Post"
+msgstr "上一篇文章"
 
 #: templates/content-single.php:117
 msgid "Pages:"
@@ -173,6 +178,10 @@ msgstr "搜寻："
 msgid "Search"
 msgstr "搜寻"
 
+#: woocommerce/archive-product.php:87
+msgid "Coming soon…"
+msgstr ""
+
 #: woocommerce/content-product.php:81
 msgid "VIEW"
 msgstr ""
@@ -187,11 +196,15 @@ msgstr "如何使用"
 
 #: woocommerce/content-single-product.php:117
 msgid "you may also like"
-msgstr "你也许也喜欢"
+msgstr "相关产品"
 
 #: woocommerce/global/breadcrumb.php:25
 msgid "HOME"
 msgstr "主页"
+
+#: woocommerce/loop/no-products-found.php:17
+msgid "No products were found matching your selection."
+msgstr ""
 
 #~ msgid "SEE THE COLLECTION"
 #~ msgstr "浏览系列"
