--- a/wp-content/languages/zh_CN.po
+++ b/wp-content/languages/zh_CN.po
@@ -2,14 +2,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: EVIE website\n"
 "POT-Creation-Date: 2016-01-26 01:02+0800\n"
-"PO-Revision-Date: 2016-01-26 01:02+0800\n"
+"PO-Revision-Date: 2016-01-27 01:10+0800\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: zh_TW\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 1.8.2\n"
+"X-Generator: Poedit 1.8.6\n"
 "X-Poedit-Basepath: ../themes/evie\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
 "X-Poedit-KeywordsList: _e;__\n"
@@ -45,11 +45,11 @@ msgstr "类别"
 #: templates/content-testimonial.php:128
 #: templates/content-testimonial.php:132
 msgid "All"
-msgstr "所有"
+msgstr "所有文章"
 
 #: templates/content-blog.php:60
 msgid "ARCHIVES"
-msgstr "存档"
+msgstr "文档"
 
 #: templates/content-blog.php:82 templates/content-single.php:58
 #: woocommerce/content-single-product.php:69
@@ -204,7 +204,7 @@ msgstr "主页"
 
 #: woocommerce/loop/no-products-found.php:17
 msgid "No products were found matching your selection."
-msgstr ""
+msgstr "即将推出"
 
 #~ msgid "SEE THE COLLECTION"
 #~ msgstr "浏览系列"
