--- a/wp-content/languages/zh_CN.po
+++ b/wp-content/languages/zh_CN.po
@@ -1,15 +1,15 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: EVIE website\n"
-"POT-Creation-Date: 2016-06-25 11:54+0800\n"
-"PO-Revision-Date: 2016-06-25 11:54+0800\n"
+"POT-Creation-Date: 2016-06-26 20:53+0800\n"
+"PO-Revision-Date: 2016-06-26 20:56+0800\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: zh_TW\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 1.8.6\n"
+"X-Generator: Poedit 1.8.8\n"
 "X-Poedit-Basepath: ../themes/evie\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
 "X-Poedit-KeywordsList: _e;__\n"
@@ -449,7 +449,7 @@ msgstr "成分"
 
 #: woocommerce/content-single-product.php:87
 msgid "how to use"
-msgstr "如何使用"
+msgstr "使用方法"
 
 #: woocommerce/content-single-product.php:117
 msgid "you may also like"
