--- a/wp-content/languages/zh_TW.po
+++ b/wp-content/languages/zh_TW.po
@@ -2,14 +2,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: EVIE website\n"
 "POT-Creation-Date: 2016-06-26 20:52+0800\n"
-"PO-Revision-Date: 2016-06-26 20:56+0800\n"
+"PO-Revision-Date: 2016-07-26 00:09+0800\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: zh_TW\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 1.8.8\n"
+"X-Generator: Poedit 1.8.6\n"
 "X-Poedit-Basepath: ../themes/evie\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
 "X-Poedit-KeywordsList: _e;__\n"
@@ -362,7 +362,7 @@ msgstr "地區"
 
 #: templates/content-stocklist.php:36
 msgid "All regions"
-msgstr ""
+msgstr "所有銷售點"
 
 #: templates/content-testimonial.php:96
 msgid "BY PRODUCTS"
